--- a/W7D1/redux_currency/package.json
+++ b/W7D1/redux_currency/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "npm",
+  "name": "currency_demo_skeleton",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch",
-    "build": "webpack"
+    "start": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.24.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "webpack": "^4.2.0"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "redux": "^3.7.2",
+    "webpack": "^3.4.1"
   },
-  "devDependencies": {},
   "description": ""
 }
